# CIS

./: .gitignore  README.md  rebar.config
apps/: cessor_unit.app.src
apps/cessor_gate/: .gitignore
apps/cessor_gate/c_src/: .gitignore  CMakeLists.txt  Makefile
apps/cessor_gate/c_src/src/: cessor_gate.c  cessor_gate.cpp  cessor_gate.h
apps/cessor_gate/c_src/src/interface/: interface_remote.cpp  interface_remote.h  interface_state.h  main.cpp
apps/cessor_gate/c_src/src/interface/crypto/: crypto.cpp  crypto.h
apps/cessor_gate/c_src/src/interface/cstp/: coldstate.cpp  coldstate.h  cstp.cpp  cstp.h  cstp_callback.h  cstx.h
apps/cessor_gate/c_src/src/interface/cstp/call/: cstp_000000_0000_0303_01.cpp  cstp_000000_0000_0303_01.h
apps/cessor_gate/c_src/src/interface/cstp/state/: cstp_000000_0000_0303_00.cpp  cstp_000000_0000_0303_00.h
apps/cessor_gate/c_src/src/interface/io/: hidden_service_input.hpp  input_service.cpp  input_service.h  io.cpp  io.h
apps/cessor_gate/c_src/src/interface/launcher/: launcher.cpp  launcher.h
apps/cessor_gate/c_src/src/interface/other/cli/: gate_cli.cli
apps/cessor_gate/c_src/src/interface/other/cnode/: cnode.cpp  cnode.h
apps/cessor_gate/c_src/src/interface/other/crypto/: crypto.cpp  crypto.h
apps/cessor_gate/c_src/src/interface/other/hidden/: hidden_service_input.h
apps/cessor_gate/c_src/src/interface/other/node/: node.cpp  node.h
apps/cessor_gate/c_src/src/interface/other/remote/: crypto.cpp  crypto.h  cstp.cpp  cstp.h  interface_remote.cpp  interface_remote.h  interface_state.h
apps/cessor_gate/c_src/src/interface/other/remote/CIS/: cstp_000000_0000_0303_00.cpp  cstp_000000_0000_0303_00.h
apps/cessor_gate/c_src/src/interface/profile/: profile.cpp  profile.h
apps/cessor_gate/c_src/src/ui/config/: servicemanager.json
apps/cessor_gate/c_src/src/ui/script/: cessorDriver.js
apps/cessor_gate/c_src/src/ui/style/: mainWindow.css  window.css
apps/cessor_gate/c_src/src/ui/style/header/: controlBar.css  header.css  tabBar.css  tabList.css  tabObject.css
apps/cessor_gate/c_src/src/window/: mainwindow.cpp  mainwindow.h  windowagent.cpp  windowagent.h  windowposition.cpp  windowposition.h
apps/cessor_gate/c_src/src/window/body/: body.cpp  body.h  tabpage.cpp  tabpage.h  urlrequestinterceptor.cpp  urlrequestinterceptor.h
apps/cessor_gate/c_src/src/window/header/: header.cpp  header.h  tabbar (copy).cpp  tabbar (copy).h  tabbar.cpp  tabbar.h  tablist.cpp  tablist.h  tabmanager.cpp  tabmanager.h  tabobject.cpp  tabobject.h  windowcontrol.cpp  windowcontrol.h
apps/cessor_gate/c_src/src/window/services/: servicemanager.cpp  servicemanager.h  webservice.cpp  webservice.h
apps/cessor_gate/src/: cessor_gate.app.src  cessor_gate.erl
apps/cessor_unit/src/: cessor_unit.app.src  cessor_unit.erl
apps/cstp/src/: cstp.app.src  cstp.erl  cstp_ft.erl
apps/cstp/src/version_00/: cstp_00.erl
apps/cstp/src/version_00/version_0000/: cstp_0000.erl
apps/cstp/src/version_00/version_0000/version_000000/: cstp_000000.erl
apps/cstp/src/version_00/version_0000/version_000000/system_SD_00/: cstp_000000_00.erl
apps/cstp/src/version_00/version_0000/version_000000/system_SD_00/system_SSD_00/: cstp_000000_0000.erl
apps/cstp/src/version_00/version_0000/version_000000/system_SD_00/system_SSD_00/crypto_pRange/: cstp_000000_0000_01.erl
apps/cstp/src/version_00/version_0000/version_000000/system_SD_00/system_SSD_00/crypto_pRange/crypto_man_pPack/: crypto_man.erl  cstp_000000_0000_0100.erl
apps/cstp/src/version_00/version_0000/version_000000/system_SD_00/system_SSD_00/gate pRange/: cstp_000000_0000_03.erl
apps/cstp/src/version_00/version_0000/version_000000/system_SD_00/system_SSD_00/gate pRange/interface/: cstp_000000_0000_0300.erl  interface.erl
apps/cstp/src/version_00/version_0000/version_000000/system_SD_00/system_SSD_00/gate pRange/interface edge pPack/: cstp_000000_0000_0302.erl  interface_edge.erl
apps/cstp/src/version_00/version_0000/version_000000/system_SD_00/system_SSD_00/gate pRange/interface_port/: cstp_000000_0000_0301.erl  interface_port.erl
apps/cstp/src/version_00/version_0000/version_000000/system_SD_00/system_SSD_00/gate pRange/interface_remote/: cstp_000000_0000_0303.erl
apps/cstp/src/version_00/version_0000/version_000000/system_SD_00/system_SSD_00/store_pRange/: cstp_000000_0000_02.erl
apps/cstp/src/version_00/version_0000/version_000000/system_SD_00/system_SSD_00/store_pRange/storage_pPack/: cstp_000000_0000_0200.erl  storage.erl
apps/cstp/src/version_00/version_0000/version_000000/system_SD_00/system_SSD_00/unit_pRange/: cstp_000000_0000_00.erl
apps/cstp/src/version_00/version_0000/version_000000/system_SD_00/system_SSD_00/unit_pRange/core pPack/: core.erl  cstp_000000_0000_0000.erl
config/: sys.config  vm.args
services/system/gate/crypto/: certificate.pem
services/system/gate/print/: SPLASH
services/system/gate/print/profile/: SIGNUP  SPLASH  confirm  confirm_wrong  pass_info  pass_new  pass_wrong
services/system/gate/state/: INTERFACE
services/system/web/cessor_panel/: package-lock.json  package.json
services/system/web/cessor_panel/cpanel/: cessor_config.json  package-lock.json  package.json  system.tar.xz  webpack.config.js
services/system/web/cessor_panel/cpanel/src/: App.css  App.js  index.css  index.html
services/system/web/cessor_panel/cpanel/src/components/: main.jsx  menu.jsx  websocket.js
services/system/web/cessor_panel/cpanel/src/components/main/: docs.jsx  home.jsx
services/system/web/cessor_panel/cpanel/src/components/main/docs/: body.jsx  menu.json  menu.jsx
services/system/web/cessor_panel/public/: index.html  manifest.json
services/system/web/cessor_panel/src/: App.css  App.js  index copy.js  index.js
services/system/web/cessor_panel/src/components/: cessorDriver.js  main.jsx  menu.jsx  ws_ban.js
services/system/web/cessor_panel/src/components/main/: docs.jsx
services/system/web/cessor_panel/src/components/main/docs/: body.jsx  menu.json  menu.jsx  menu0.json
services/system/web/cessor_panel/src/components/main/docs/menu/: element.jsx
(+43 files in other folders)
